--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/faviconmain.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vine Pioneer</title>
+
+    <!-- Preload critical hero image for faster LCP -->
+    <link rel="preload" as="image" href="/images/Vineyard1.jpg" fetchpriority="high" />
   </head>
   <body>
     <div id="root"></div>
