--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/faviconmain.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vine Pioneer</title>
+    <meta name="description" content="Trellis - Vineyard management software for planning, operations, and winery production" />
+    <title>Trellis - Vineyard Management Software</title>
   </head>
   <body>
     <div id="root"></div>
