updates to a lot on all pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/faviconmain.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Trellis - Vineyard management software for planning, operations, and winery production" />
+
+    <!-- Content Security Policy: Allow Stripe scripts -->
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://checkout.stripe.com;
+      style-src 'self' 'unsafe-inline';
+      img-src 'self' data: https:;
+      font-src 'self' data:;
+      connect-src 'self' https://*.supabase.co https://js.stripe.com https://checkout.stripe.com;
+      frame-src https://js.stripe.com https://checkout.stripe.com;
+    ">
+
     <title>Trellis - Vineyard Management Software</title>
   </head>
   <body>
