updates to a lot on all pages

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Trellis - Vineyard management software for planning, operations, and winery production" />
 
-    <!-- Content Security Policy: Allow Stripe scripts -->
+    <!-- Content Security Policy: Allow Stripe scripts and Supabase WebSockets -->
     <meta http-equiv="Content-Security-Policy" content="
       default-src 'self';
       script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.stripe.com https://checkout.stripe.com;
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: https:;
       font-src 'self' data:;
-      connect-src 'self' https://*.supabase.co https://js.stripe.com https://checkout.stripe.com;
+      connect-src 'self' https://*.supabase.co wss://*.supabase.co https://js.stripe.com https://checkout.stripe.com;
       frame-src https://js.stripe.com https://checkout.stripe.com;
     ">
 
